# pymeta

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
pymeta/: __init__.py  search.py
